[package]
name = "httpstime-rs"
version = "0.1.4"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT"

description = "httpstime client in Rust"

homepage = "https://brayniac.github.io/httpstime-rs"
repository = "https://github.com/brayniac/httpstime-rs"

readme = "README.md"

[dependencies]
hyper = "0.7.2"
time = "0.1.34"
log = "0.3.5"
shuteye = "0.1.0"
getopts = "0.2.14"
curl = "0.2.15"

[profile.release]
opt-level = 3
debug = true
